tests/expectations/parser/expression/circuit_init_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '<eof>'
    --> test:1:3
     |
   1 | x {
     |   ^""",
    """
did not consume all input: '}' @ 1:3-4
""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:5
     |
   1 | x { , }
     |     ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,,,}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:6
     |
   1 | x {x,,}
     |      ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,,x}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,x}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:8
     |
   1 | x {x:y,,}
     |        ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,,x:y}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x {,x:y}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test:1:6
     |
   1 | x {x:}
     |      ^""",
]
